<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/power"
        android:icon="@drawable/ic_power_off_24dp"
        android:title="@string/power"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_button"
        app:showAsAction="always" />
    <item
        android:id="@+id/keyboard"
        android:icon="@drawable/ic_keyboard_black_24dp"
        android:title="@string/keyboard_input"
        app:showAsAction="always" />
    <item
        android:id="@+id/config"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="always"
        android:title="@string/server_configuration" />

</menu>