<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cadu.yarc.Configuration">

    <TextView
        android:id="@+id/conn_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conn_settings"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/conn_form"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/host_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_address"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/host_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/host_port" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/conn_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connect"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/power_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wol_settings"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/power_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/mac_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mac_address" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/power_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/set"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
